# fetch_lecture

./: .gitignore  LICENSE  README.md  api.py  auto_click.js  captcha_hash_table.csv  charsets.json  ddddocr_api.py  ddddocr_api.spec  fetch_lecture.spec  greasemonkey.js  gui.py  gui_app.spec  ids-encrypt.js  ids_encrypt.py  login.py  login_to_ehall.py  main.py  pyproject.toml  requirements.txt  seu_auth.py  test.py
gui/: app.py  backend.py
pages/: fetch.html  index.html  lecture_list.html
